<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="back_label">Back</string>
    <string name="content_desc_del_msg">delete message</string>
    <string name="content_desc_new_msg">new message</string>
    <string name="content_desc_next_msg">Next Message</string>
    <string name="content_desc_prev_msg">Prev Message</string>
    <string name="content_desc_replay_msg">replay message</string>
    <string name="desc_business_category">Media</string>
    <string name="desc_business_category_icon">icon business</string>
    <string name="desc_image_arrow">image</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_a">a.</string>
    <string name="disclaimer_a_desc">Offline maps are free to download for use on this phone only. Do not reengineer or resell the map.</string>
    <string name="disclaimer_b">b.</string>
    <string name="disclaimer_b_desc">The tips, reviews and opinions expressed may originate from end users who submitted them. They do not reflect those of Streetdirectory. Streetdirectory accepts no responsibility legal or otherwise for their accuracy or substance and you are advised to rely on the tips at your own risk and discretion.</string>
    <string name="disclaimer_c">c.</string>
    <string name="disclaimer_c_desc">Use a handsfree kit if you are using this Streetdirectory app as your navigation guide. Streetdirectory accepts no responsibility for any inaccuracy, accident or mishap as a result of using our app. Using your mobile phone while driving (without a handsfree kit) is illegal and dangerous.</string>
    <string name="disclaimer_title">Terms</string>
    <string name="dummy_business_category">Computers</string>
    <string name="dummy_message_date">Wed, Mar 20 2013 @ 1659</string>
    <string name="dummy_message_detail_date">Wed, Mar 20 2013 @ 1658</string>
    <string name="dummy_message_detail_sender">Streetdirectory</string>
    <string name="dummy_message_detail_subject">Welcome to Streetdirectory!</string>
    <string name="dummy_message_detail_title">1 of 10</string>
    <string name="dummy_message_from">Streetdirectory</string>
    <string name="dummy_message_subject">Welcome to Streetdirectory!</string>
    <string name="free_map_how_a">A. Copy maps directly from</string>
    <string name="free_maps_a_link"><u>streetdirectory.com</u></string>
    <string name="free_maps_b_link"><u>streetdirectory.com/freemaps</u></string>
    <string name="free_maps_c_link"><u>editor@streetdirectory.com</u></string>
    <string name="free_maps_description">"You can use Streetdirectory maps for free. The maps can be use for your corporate 
websites, blogs, mobile apps, wedding 
invitation cards or name cards."</string>
    <string name="free_maps_how_b">B. Use these widgets</string>
    <string name="free_maps_how_c">"C. For high resolution maps (print use),
request directly from"</string>
    <string name="free_maps_how_title">How to get your free maps?</string>
    <string name="free_maps_title">Free Maps</string>
    <string name="free_maps_usage">Usage of free maps are subject to</string>
    <string name="free_maps_usage_link">streetdirectory.com/termsofuse</string>
    <string name="free_website_1">1. Your business must be registered with ACRA.</string>
    <string name="free_website_2">2. Every registered company gets one free website.</string>
    <string name="free_website_call">Call</string>
    <string name="free_website_domain">Free Domain</string>
    <string name="free_website_hosting">Free Hosting</string>
    <string name="free_website_image_desc">Free Website</string>
    <string name="free_website_phone_number">6594 2434</string>
    <string name="free_website_title">Free Website</string>
    <string name="free_website_to_get_text">to get your free website</string>
    <string name="free_website_to_get_text_caption_on">To get this free website</string>
    <string name="free_website_voucher">Voucher ID: 873X-1256A-245</string>
    <string name="message_detail_delete_button">Delete</string>
    <string name="message_detail_from">From:</string>
    <string name="message_detail_new_button">New</string>
    <string name="message_detail_reply_button">Reply</string>
    <string name="refresh_label">Refresh</string>
    <string name="start_menu_description">Menu</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="terms_and_conditions_desc">By using this Streetdirectory app, you agree to be bound by the following Terms of Use (as per our website) found at</string>
    <string name="terms_and_conditions_link">www.streetdirectory.com/termsofuse</string>
    <string name="tutorial_description">Search any direction and click on the Save button found at top right of the app header.</string>
    <string name="tutorial_save_direction">save direction</string>
    <string name="tutorial_text_view">You have not save any direction</string>
    <string name="tutorial_to_save">To Save</string>
</resources>