<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/MenuBar" android:layout_width="fill_parent" style="@style/SDMenuBar">
        <Button android:id="@id/BackButton" android:layout_width="wrap_content" android:text="@string/back_label" android:layout_centerVertical="true" android:contentDescription="@string/start_menu_description" style="@style/SDBackButton" />
        <TextView android:id="@id/TitleBar" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/disclaimer_title" style="@style/SDTitleBar" />
    </RelativeLayout>
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:background="#ffced4e0" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:background="@drawable/frame_image" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditions" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditions_desc" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff0000ff" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditions_link" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:id="@id/textView4" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer_a" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer_a_desc" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer_b" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer_b_desc" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer_c" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disclaimer_c_desc" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>