<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/MenuBar" android:layout_width="fill_parent" style="@style/SDMenuBar">
        <Button android:id="@id/BackButton" android:layout_width="wrap_content" android:text="@string/back_label" android:layout_centerVertical="true" android:contentDescription="@string/start_menu_description" style="@style/SDBackButton" />
        <TextView android:id="@id/TitleBar" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/dummy_message_detail_title" android:layout_centerInParent="true" style="@style/SDTitleBar" />
        <ImageButton android:id="@id/button_prev" android:background="@drawable/selector_button_green_left" android:layout_width="wrap_content" android:src="@drawable/ic_msg_prev" android:text="@string/refresh_label" android:layout_toLeftOf="@id/button_next" android:layout_centerVertical="true" android:contentDescription="@string/content_desc_next_msg" style="@style/SDGreenSmallButton" />
        <ImageButton android:id="@id/button_next" android:background="@drawable/selector_button_green_right" android:layout_width="wrap_content" android:src="@drawable/ic_msg_next" android:text="@string/refresh_label" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/content_desc_prev_msg" style="@style/SDGreenSmallButton" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_header" android:background="@drawable/shape_gray_gradient" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/MenuBar">
        <View android:background="@drawable/shape_gradient_shadow_bottom" android:layout_width="fill_parent" android:layout_height="4.0dip" android:layout_alignParentTop="true" />
        <TextView android:textSize="12.0sp" android:id="@id/text_view_label_from" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="10.0dip" android:text="@string/message_detail_from" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:id="@id/text_view_from" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/dummy_message_from" android:layout_toRightOf="@id/text_view_label_from" android:layout_alignBaseline="@id/text_view_label_from" />
        <View android:id="@id/viewLine1" android:background="#ffaaaaaa" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_below="@id/text_view_label_from" />
        <View android:id="@id/viewLine2" android:background="#fffafafa" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/viewLine1" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:id="@id/text_view_subject" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/dummy_message_subject" android:layout_below="@id/viewLine2" android:layout_alignLeft="@id/text_view_label_from" />
        <TextView android:textSize="12.0sp" android:id="@id/text_view_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/dummy_message_date" android:layout_below="@id/text_view_subject" android:layout_alignLeft="@id/text_view_label_from" />
    </RelativeLayout>
    <View android:id="@id/view2" android:background="#ff777777" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/layout_header" />
    <WebView android:id="@id/web_view_email_detail" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/view3" android:layout_below="@id/view2" />
    <View android:id="@id/view3" android:background="#ff888888" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_above="@id/layout_button_option" />
    <LinearLayout android:id="@id/layout_button_option" android:background="@drawable/shape_gray_gradient_alpha" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="10.0sp" android:textColor="#ff777777" android:id="@id/button_delete" android:background="@android:color/transparent" android:paddingTop="2.0dip" android:paddingBottom="3.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/message_detail_delete_button" android:drawableTop="@drawable/selector_button_delete_msg" android:layout_weight="1.0" android:contentDescription="@string/content_desc_del_msg" />
        <Button android:textSize="10.0sp" android:textColor="#ff777777" android:id="@id/button_reply" android:background="@android:color/transparent" android:paddingTop="2.0dip" android:paddingBottom="3.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/message_detail_reply_button" android:drawableTop="@drawable/selector_button_replay_msg" android:layout_weight="1.0" android:contentDescription="@string/content_desc_replay_msg" />
        <Button android:textSize="10.0sp" android:textColor="#ff777777" android:id="@id/button_new" android:background="@android:color/transparent" android:paddingTop="2.0dip" android:paddingBottom="3.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/message_detail_new_button" android:drawableTop="@drawable/selector_button_new_msg" android:layout_weight="1.0" android:contentDescription="@string/content_desc_new_msg" />
    </LinearLayout>
</RelativeLayout>