<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/imageViewCategory" android:padding="3.0dip" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/desc_business_category_icon" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/textViewTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:text="@string/dummy_business_category" android:layout_toLeftOf="@id/imageViewArrow" android:layout_toRightOf="@id/imageViewCategory" android:layout_centerVertical="true" android:contentDescription="@string/desc_business_category" />
    <ImageView android:id="@id/imageViewArrow" android:layout_width="9.0dip" android:layout_height="14.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/cell_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/desc_image_arrow" />
</RelativeLayout>